[ADD] Simplified Example codes and README

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,3 +3,7 @@ use_frameworks!
 target 'SwiftUIExample' do
   pod 'SpotlightSearch', :path => '../'
 end
+
+target 'QuickExample' do
+  pod 'SpotlightSearch', :path => '../'
+end
